--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* ------------ GOOGLE FONTS ------------ */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('fundo.jpeg');
 :root{
   --font: 'Poppins', sans-serif;
   --title-font-size: 2.25rem;
