--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body{
   font-size: var(--normal-font-size);
   color: var(--text-color);
   background-color: var(--bg-color);
-  background: url('fundorosa.jpeg');
+  background: url('fundorosa.jpeg') img { opacity: 0.5; };
 }
 
 li{
