--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   --small-font-size: 0.75rem;
   --bg-color: #000;
   --second-bg-color: #808080;
-  --text-color:#8d042f;
+  --text-color:#f1efd9;
   --second-text-color: #000;
   --main-color: #8d042f;
   --height-nav: 3em;
